# market-data-extractor

./: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
docker/: docker-compose.yml
docker/initdb/: 001_init.sql  001_init_old.sql
docs/: 0_init.md  2_stack.md  3_structure.md  4_log.md  4_tasks.md  5_log.md
docs/journal/: jupyter.md  models.md  venv.md
notebooks/: 00_health.ipynb  00_test.ipynb  01_create.ipynb  02_get.ipynb  03_update.ipynb  05_yf.ipynb
src/market_extractor/: _docs.md
src/market_extractor/db/: _docs.md  _engine.py  check.py  create.py  db_create.py  engine.py  lookup.py
src/market_extractor/db/models/: ticker.py
src/market_extractor/providers/yfinance/: __init__.py  _tools.py  ticker.py
src/market_extractor/utils/: data.py  math_utils.py
